______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.198:

* XINS/Java Common Library:
  - Removed reasonFor(Throwable) method and it's brother
    reasonForImpl(Throwable) from class ServiceCaller and from
    LDAPServiceCaller. These methods is no longer used.

* Unit tests:
  - Added BasicPropertyReader tests.

* Build and release process:
  - Removed previous version from .version.properties file. It is hardly
    useful and makes things unnecessarily complexity.

* Logdoc:
  - The root cause of any exception is now determined and that is logged
    instead of the passed exception object.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.197:

* XINS/Java Client Framework:
  - Improved the fail-over decision process slightly. The XINS error codes
    "_InvalidRequest" and "_DisabledFunction" indicate that the request was
    not handled, so if one of those error codes is returned, the call may
    fail-over.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.196:

* XINS/Java Common Library:
  - Moved TimeOutException (introduced in XINS 0.195) from package
    org.xins.common.service to package org.xins.common.
  - Added generic TimeOutController class in package org.xins.common.
  - Now only performing fail-over if the new method shouldFailOver() returns
    true. By default the method returns false, but it may be overridden by
    subclasses.
  - Added log message 3315-3318, which describe the decision making process
    for fail-over, depending on available targets and whether or not fail-over
    is in principle allowed, considering the problem at hand.
  - Added log message 3319: Target descriptor constructed.
  - Added append(boolean) method to class FastStringBuffer.
  - No longer logging reason with log message 3313 in class ServiceCaller. The